--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>MA PREMIERE PUBLICATION SUR GITHUB</title>
 </head>
 <body>
-<Marquee><H1>MA PREMIERE PUBLICATION SUR GITHUB</H1></Marquee>
+<Marquee behavior="scroll" direction="left" scrolammount="5"><H1>MA PREMIERE PUBLICATION SUR GITHUB</H1></Marquee>
 
 </body>
 </html>
